--- a/css/style.css
+++ b/css/style.css
@@ -18,8 +18,9 @@
 
 .tc-navbar-links {
     position: relative;
-    right: 100px;
+    right: 285px;
     font-family: fantasy;
+    color: red;
 }
 
   a:visited {
@@ -44,10 +45,67 @@
     /*padding: 40px; (If don't want to set min-height or some image content is there) */
 }
 
+.tc-img-padding {
+    margin-bottom: 50px;
+}
+
 #tc-footer {
-    color: blue;
+    color: maroon;
     font-family: fantasy;
-    font-size: 10px;
+    font-size: 14px;
     width: 100%;
     text-align: center;
+}
+
+.tc-about-me {
+    background-color: white;
+    border-style: solid;
+    border-width: 5px;
+    border-color: teal;
+    margin-right: 150px;
+    margin-bottom: 100px;
+    padding-top: 20px;
+    height: 500px;
+}
+
+.tc-about-me-header {
+    font-family: fantasy;
+    color: maroon;
+    margin-bottom: 20px;
+}
+
+.tc-about-me-hr {
+    border: none;
+    height: 3px;
+    background-color: lightgray;
+    margin-bottom: 35px;
+}
+
+.tc-connect-with-me {
+    background-color: white;
+    border-style: solid;
+    border-width: 5px;
+    border-color: teal;
+    height: 200px;
+}
+
+.tc-connect-with-me-li {
+    display: inline;
+    padding-right: 20px;
+    margin-left: 21px;
+}
+
+.tc-connect-with-me-icons {
+    border-radius: 50%
+}
+
+.tc-about-me-img-float {
+    float: left;
+    margin-right: 30px;
+    border-radius: 50%;
+}
+
+.tc-about-me-txt-float {
+    font-family: fantasy;
+    font-size: 16px;
 }
