--- a/css/style.css
+++ b/css/style.css
@@ -109,3 +109,33 @@
     font-family: fantasy;
     font-size: 16px;
 }
+
+.tc-contact-form {
+    background-color: white;
+    border-style: solid;
+    border-width: 5px;
+    border-color: teal;
+    margin-right: 150px;
+    margin-bottom: 100px;
+    padding-top: 20px;
+    height: 750px;
+}
+
+.tc-contact-form-fields {
+    width: 90%;
+    margin-left: 20px;
+}
+
+.tc-contact-form-textarea {
+    margin-top: 30px;
+    margin-bottom: 25px;
+}
+
+.tc-contact-form-submit {
+    margin-left: 20px;
+    background-color: teal;
+}
+
+button:hover {
+    background-color: maroon;
+}
